cluster/k8s/agentplane-staging/egress-migrations/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: agentplane-egress-migrate
  namespace: agentplane-staging
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: agentplane-egress-migrate
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: agentplane-staging
            k8s:cnpg.io/cluster: agentplane-egress-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
